--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <script src="https://cdn.jsdelivr.net/npm/progressbar.js/dist/progressbar.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <title>PlanArc</title>
   </head>
   <body>
